# camect-rs

./: .gitignore  Cargo.toml
examples/: events.rs  get_info.rs  list_cameras.rs  snapshot.rs
src/: lib.rs
