[package]
name = "camect"
version = "0.1.0"
edition = "2021"
authors = ["Myles Grant <myles@mylesgrant.com>"]
description = "Library to access the Camect local API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
tungstenite = { version = "0.17", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
native-tls = "0.2"

[dev-dependencies]
env_logger = "0.9"
